--- a/app/blueprints/auth/templates/auth/signup.html
+++ b/app/blueprints/auth/templates/auth/signup.html
@@ -9,11 +9,11 @@
 	<br>
 	<form method="post" id="form-signup" style="width: 35%;">
 		<label for="username" class="form-label">Username</label>
-		<input type="text" id="username" name="username" class="form-control" required>
+		<input type="text" id="username" name="username" class="form-control" maxlength="80" required>
 		<label for="email" class="form-label">E-mail</label>
-		<input type="email" id="email" name="email" class="form-control" required>
+		<input type="email" id="email" name="email" class="form-control" maxlength="80" required>
 		<label for="password" class="form-label">Password</label>
-		<input type="password" id="password" name="password" class="form-control" required>
+		<input type="password" id="password" name="password" class="form-control" minlength="8" maxlength="20" required>
 		<br>
 		<button type="button" class="btn btn-danger" onclick="window.location.replace('{{ url_for('core.index') }}');">Cancel</button> <button type="submit" class="btn btn-primary">Confirm</button>
 	</form>
